experiment-01/k8s/templates/admin-portal/kubernetes-experiments-01-admin-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-experiments-01-admin-portal
  namespace: kubernetes-experiments-01
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: kubernetes-experiments-01-admin-portal
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kubernetes-experiments-01
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: kubernetes-experiments-01-admin-portal
    spec:
      containers:
        - name: kubernetes-experiments-01-admin-portal
          image: cebartling/k8s-experiments-01-admin-portal
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /livenessCheck
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /readinessCheck
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              memory: "1024Mi"
              cpu: "200m"
            limits:
              memory: "1024Mi"
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
      restartPolicy: Always
