experiment-01/k8s/templates/admin-portal/kubernetes-experiments-01-admin-portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-experiments-01-admin-portal
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: kubernetes-experiments-01-admin-portal
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32001
