experiment-01/k8s/templates/admin-portal/kubernetes-experiments-01-admin-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-experiments-01-admin-portal-ingress
  namespace: kubernetes-experiments-01
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/admin-portal"
            backend:
              service:
                name: kubernetes-experiments-01-admin-portal
                port:
                  number: 3000
